--- a/penggunaan-js.html
+++ b/penggunaan-js.html
@@ -7,11 +7,12 @@
     <!-- <script type="text/javascript">
       alert("Selamat Pagi !");
     </script> -->
+    <script src="latihan1.js"></script>
   </head>
   <body>
     <h1>Hello Guys 🚀</h1>
-    <script type="text/javascript">
+    <!-- <script type="text/javascript">
       alert("Selamat Pagi dari body!");
-    </script>
+    </script> -->
   </body>
 </html>
